<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailUserActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/username_view"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/img_item_avatar"
                app:layout_constraintStart_toStartOf="@id/img_item_avatar"
                app:layout_constraintTop_toBottomOf="@+id/img_item_avatar" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/name_user"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_item_username"
                app:layout_constraintStart_toStartOf="@id/tv_item_username"
                app:layout_constraintTop_toBottomOf="@id/tv_item_username" />

            <TextView
                android:id="@+id/tv_item_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="12.5sp"
                app:layout_constraintEnd_toStartOf="@id/tv_item_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

            <TextView
                android:id="@+id/tv_item_location_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/location_value"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_item_company_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_location" />

            <TextView
                android:id="@+id/tv_item_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/company"
                android:textSize="12.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_item_location"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

            <TextView
                android:id="@+id/tv_item_company_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/company_value"
                android:textSize="12.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_item_location_value"
                app:layout_constraintTop_toBottomOf="@id/tv_item_company" />

            <TextView
                android:id="@+id/tv_follower_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/followers"
                app:layout_constraintEnd_toEndOf="@+id/img_item_avatar"
                app:layout_constraintStart_toStartOf="@+id/img_item_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_follower_value" />

            <TextView
                android:id="@+id/tv_follower_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/followers_value"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_item_avatar"
                app:layout_constraintStart_toStartOf="@+id/img_item_avatar"
                app:layout_constraintTop_toBottomOf="@+id/img_item_avatar" />

            <TextView
                android:id="@+id/tv_following_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="@+id/tv_following_value"
                app:layout_constraintStart_toStartOf="@+id/tv_following_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_following_value" />

            <TextView
                android:id="@+id/tv_following_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/following_value"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_follower_value"
                app:layout_constraintTop_toTopOf="@+id/tv_follower_value" />

            <TextView
                android:id="@+id/tv_repo_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/repository_value"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_follower_value"
                app:layout_constraintTop_toTopOf="@+id/tv_follower_value"
                tools:layout_editor_absoluteX="295dp" />

            <TextView
                android:id="@+id/tv_repo_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/repository"
                app:layout_constraintEnd_toEndOf="@id/tv_repo_value"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tv_repo_value"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_value" />

            <ToggleButton
                android:id="@+id/tog_favorit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fav_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_follows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/tv_repo_view"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs_follows"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>